[tool.poetry]
name = "chain1"
version = "0.1.0"
description = ""
authors = ["Karthick Shanmuga Rao <karthikssfeb@gmail.com>"]
readme = "README.md"
packages = [{include = "chain1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
langchain-community = "^0.2.0"
beautifulsoup4 = "^4.12.3"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
